added swagger documentation to store routes and documentation route
